# kickbackcalculator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kickbackcalculator/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
